--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "framer-motion": "^11.3.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
