--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.4",
+    "@tsparticles/all": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.2",
-    "framer-motion": "^11.3.0",
+    "framer-motion": "^11.3.28",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
+    "react-tsparticles": "^2.12.2",
     "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.5.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
